Fix Theme 1 jump link position (#236)
* Fix Theme 1 jump link position

* Shift jump-link fix to base styles

--- a/css/templates/themes/1/page.css
+++ b/css/templates/themes/1/page.css
@@ -107,6 +107,10 @@ h4,
   margin-bottom: 0;
 }
 
+.ampstart-image-fullpage-hero {
+  margin-bottom: 0;
+}
+
 .ampstart-image-fullpage-hero footer {
   position: static;
 }
